syntax = "proto3";

package bilibili.app;
option go_package = "metadata";
option java_multiple_files = true;
option java_package = "com.bilibili.grpc.app";
option objc_class_prefix = "BAPIMetadata";

message Metadata {
    // 登录鉴权
    string access_key = 1;
    // 包类型
    string mobi_app = 2;
    // 运行设备
    string device = 3;
    // 构建号
    int32 build = 4;
    // 渠道
    string channel = 5;
    // 设备buvid
    string buvid = 6;
    // 设备类型
    string platform = 7;
}

// 设备信息
message Device {
    // 产品编号
    // 数据平台分配：粉=1、白=2、蓝=3、直播姬=4、HD=5、海外=6、OTT=7、漫画=8、TV野版=9、小视频=10、网易漫画=11、网易漫画lite=12、网易漫画HD=13、国际版=14
    int32 app_id = 1;
    // 版本号
    int32 build = 2;
    // 设备id
    string buvid = 3;
    // 包类型
    string mobi_app = 4;
    // 平台：ios/android
    string platform = 5;
    // 运行设备
    string device = 6;
    // 渠道
    string channel = 7;
    // 手机品牌
    string brand = 8;
    // 手机型号
    string model = 9;
    // 系统版本
    string osver = 10;
}